Bug 158457: Properly call StartDocumentLoad when loading XSLT stylesheets and let that deal with stopping scripts and stylesheets from being loaded instead of manually stopping that in the XSL contentsink.

r=harishd sr=peterv a=asa